img alignments in portfolio fixed

--- a/assets/style.css
+++ b/assets/style.css
@@ -22,6 +22,9 @@ background: linear-gradient(to right, rgb(74, 173, 253) , rgba(102,102,102));
 	color: #000000;
 	text-align: center;
 }
+h4 {
+	width: 100%;
+}
 #topH3 {
 	position: relative;
 }
@@ -42,12 +45,10 @@ a {
 a:hover {
 	color: red;
 }
-
 .clearfix {
     margin-top: 100px;
     margin-bottom: 100px;
 }
-
 header {
   color: #333;
   background-color:#666666;
@@ -57,14 +58,12 @@ header {
   position: fixed;
   z-index: 100;
 }
-
 .headcontainer {
 	left: 158px;
 	width: 100%;
     margin: 0 auto;
     clear: both;
 }
-
 #name {
 	font-weight: bold;
 	float: left;
@@ -74,14 +73,12 @@ header {
 	color: white;
 	height: 88px;
 }
-
 nav, #formnavport {
 	float: right;
 	width: 240px;
 	height: 20px;
 	margin: 30px 370px 30px 0px;
 }
-
 #left, #middle, #right {
 	background-color: #666666;
 	color: #9d9d9d;
@@ -91,7 +88,6 @@ nav, #formnavport {
 	padding: 10px;
 	line-height: 5px;
 }
-
 #middle {
 	float: right;
 	padding: 10px;
@@ -99,13 +95,11 @@ nav, #formnavport {
 	border-right: 1px solid #efefef;
 	line-height: 5px;
 }
-
 #right {
 	float: right;
     padding: 10px;
     line-height: 5px;
 }
-
 .clearfix::after {
     content: "";
     clear: both;
@@ -114,7 +108,6 @@ nav, #formnavport {
   	height: 50px;	
   	width: 100%;
 }
-
 .infobox {
 	float: left;
 	padding-top: 20px;
@@ -125,7 +118,6 @@ nav, #formnavport {
 	border-color: gray;
 	border: 1px solid #EAEAEA;
 }
-
 #boxtitle {
 	font-family: 'Georgia', Times, Times New Roman, serif;
 	font-weight: bold;
@@ -138,20 +130,11 @@ nav, #formnavport {
 	text-align: left;
 	padding-top:right;
 }
-
 .para {
 	margin: 3% 3% 2% 5%;
 	text-align: left;
 	line-height: 200%;
 }	
-
-/* img {
-	margin-top: 3%;
-	float: left;
-	margin-left: 5%;
-	margin-right: 2%;
-} */
-
 .connectbox, .formconnectbox {
 	float: left;
 	margin-top: 50px;
@@ -265,39 +248,28 @@ button {
 	position: relative;
 	padding-top: 20px;
 	background-color: #ffffff;
-	width: 650px;
+	width: 600px;
 	margin-left: 150px;
 	margin-top: 50px;
 	border-color: gray;
 	border: 1px solid #EAEAEA;
-	height: 700px;
+	min-height: 400px;
+	overflow: hidden;
 }
 #pLabels, h4 {
 	position: absolute;
 }
-.pic1, .pic3 {
+.pic1, .pic3, .pic5 {
 	float: left;
 	position: relative;
-	margin-left: 20px;
-	margin-top: 30px;
-}
-.pic2 {
-	float: right;
-	position: relative;
-	margin-right: 6%;
+	margin-left: 4%;
 	margin-top: 4%;
 }
-.pic4 {
+.pic2, .pic4 {
 	float: right;
 	position: relative;
-	margin: 20px 30px;
-}
-.pic5 {
-	float: left;
-	position: relative;
-	margin-left: 2%;
-	margin-top: 5%;
-	margin-bottom: 40px;
+	margin-right: 4%;
+	margin-top: 4%;
 }
 
 /*            DISPLAY @ 980px               */
@@ -312,6 +284,7 @@ button {
 
 	.portfoliobox, .formconnectbox {
 		width: 400px;
+		height: auto;
 		margin-left: 80px;
 		margin-top: 30px;
 	} 
@@ -443,7 +416,7 @@ button {
 		margin-left: -30px;
 		padding-left: 250px;
 	}
-	h4, #pLabels {
+	pLabels {
 		width: 256px;
 	}
 	.pic1,.pic3, .pic5  {
@@ -454,7 +427,7 @@ button {
 	}
 	.pic1, .pic2 {
 		margin-bottom: 50px;
-	}	\
+	}
 	.pic3, .pic4 {
 		margin-top: 0px;
 	}
